--- a/src/main/resources/docgen/templates/dl21-passage-unicoil-noexp-0shot.template
+++ b/src/main/resources/docgen/templates/dl21-passage-unicoil-noexp-0shot.template
@@ -49,7 +49,5 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
-Some of these regressions correspond to official TREC 2021 Deep Learning Track "baseline" submissions:
-
-+ `p_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
-+ `p_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
+This run roughly corresponds to run `d_unicoil0` submitted to the TREC 2021 Deep Learning Track under the "baseline" group.
+The difference is that here we are using pre-encoded queries, whereas the official submission performed query encoding on the fly.
