--- a/src/main/resources/regression/disk45.yaml
+++ b/src/main/resources/regression/disk45.yaml
@@ -1,54 +1,49 @@
 ---
-name: disk45
-index_command: target/appassembler/bin/IndexCollection
-index_utils_command: target/appassembler/bin/IndexReaderUtils
-search_command: target/appassembler/bin/SearchCollection
-topic_root: src/main/resources/topics-and-qrels/
-qrels_root: src/main/resources/topics-and-qrels/
-index_root:
-ranking_root:
+corpus: disk45
+corpus_path: collections/newswire/disk45/
+
+index_path: indexes/lucene-index.disk45.pos+docvectors+raw
 collection: TrecCollection
 generator: DefaultLuceneDocumentGenerator
 threads: 16
-index_options:
-  - -storePositions
-  - -storeDocvectors
-  - -storeRaw
-topic_reader: Trec
+index_options: -storePositions -storeDocvectors -storeRaw
+index_stats:
+  documents: 528030
+  documents (non-empty): 528030
+  total terms: 174540872
+
+search_command: target/appassembler/bin/SearchCollection
+topic_root: src/main/resources/topics-and-qrels/
+qrels_root: src/main/resources/topics-and-qrels/
+ranking_root:
+
 evals:
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m map
+    params: -m map
     separator: "\t"
     parse_index: 2
     metric: map
     metric_precision: 4
     can_combine: true
   - command: tools/eval/trec_eval.9.0.4/trec_eval
-    params:
-      - -m P.30
+    params: -m P.30
     separator: "\t"
     parse_index: 2
     metric: p30
     metric_precision: 4
     can_combine: true
-input_roots:
-  - /tuna1/      # on tuna
-  - /store/      # on orca
-  - /scratch2/   # on damiano
-input: collections/newswire/disk45/
-index_path: indexes/lucene-index.disk45.pos+docvectors+raw
-index_stats:
-  documents: 528030
-  documents (non-empty): 528030
-  total terms: 174540872
+
+topic_reader: Trec
 topics:
   - name: "[TREC-7 Ad Hoc Topics](../src/main/resources/topics-and-qrels/topics.adhoc.351-400.txt)"
+    id: trec7
     path: topics.adhoc.351-400.txt
     qrel: qrels.adhoc.351-400.txt
   - name: "[TREC-8 Ad Hoc Topics](../src/main/resources/topics-and-qrels/topics.adhoc.401-450.txt)"
+    id: trec8
     path: topics.adhoc.401-450.txt
     qrel: qrels.adhoc.401-450.txt
+
 models:
   - name: bm25
     display: BM25
