--- a/src/main/resources/regression/disk45.yaml
+++ b/src/main/resources/regression/disk45.yaml
@@ -43,6 +43,10 @@ topics:
     id: trec8
     path: topics.adhoc.401-450.txt
     qrel: qrels.adhoc.401-450.txt
+  - name: "[TREC 2004 Robust Track Topics](../src/main/resources/topics-and-qrels/topics.robust04.txt)"
+    id: robust04
+    path: topics.robust04.txt
+    qrel: qrels.robust04.txt
 
 models:
   - name: bm25
@@ -53,9 +57,11 @@ models:
       map:
         - 0.1862
         - 0.2515
+        - 0.2531
       p30:
         - 0.3093
         - 0.3560
+        - 0.3102
   - name: bm25+rm3
     display: +RM3
     params:
@@ -65,9 +71,11 @@ models:
       map:
         - 0.2354
         - 0.2750
+        - 0.2903
       p30:
         - 0.3447
         - 0.3760
+        - 0.3365
   - name: bm25+ax
     display: +Ax
     params:
@@ -79,9 +87,11 @@ models:
       map:
         - 0.2431
         - 0.2812
+        - 0.2896
       p30:
         - 0.3287
         - 0.3753
+        - 0.3333
   - name: ql
     display: QL
     params:
@@ -90,9 +100,11 @@ models:
       map:
         - 0.1843
         - 0.2460
+        - 0.2467
       p30:
         - 0.3073
         - 0.3480
+        - 0.3079
   - name: ql+rm3
     display: +RM3
     params:
@@ -102,9 +114,11 @@ models:
       map:
         - 0.2168
         - 0.2702
+        - 0.2747
       p30:
         - 0.3307
         - 0.3680
+        - 0.3232
   - name: ql+ax
     display: +Ax
     params:
@@ -116,6 +130,8 @@ models:
       map:
         - 0.2298
         - 0.2647
+        - 0.2774
       p30:
         - 0.3193
         - 0.3500
+        - 0.3229
