--- a/src/main/resources/regression/msmarco-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-doc-per-passage-v2
-corpus_path: collections/msmarco/doc-per-passage-v2/
+corpus: msmarco-doc-segmented
+corpus_path: collections/msmarco/msmarco-doc-segmented/
 
-index_path: indexes/lucene-index.msmarco-doc-per-passage-v2
+index_path: indexes/lucene-index.msmarco-doc-segmented
 collection_class: JsonCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
 index_options: -storePositions -storeDocvectors -storeRaw
 index_stats:
   documents: 20545677
-  documents (non-empty): 20545612
-  total terms: 3056059952
+  documents (non-empty): 20545677
+  total terms: 3200515914
 
 metrics:
   - metric: MAP
@@ -50,78 +50,78 @@ models:
     params: -bm25 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2609
+        - 0.2690
       R@100:
-        - 0.7737
+        - 0.7847
       R@1000:
-        - 0.9095
+        - 0.9178
   - name: bm25-default+rm3
     display: +RM3
     params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2324
+        - 0.2419
       R@100:
-        - 0.7768
+        - 0.7882
       R@1000:
-        - 0.9266
+        - 0.9355
   - name: bm25-default+ax
     display: +Ax
     params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2170
+        - 0.2208
       R@100:
-        - 0.7578
+        - 0.7710
       R@1000:
-        - 0.9207
+        - 0.9264
   - name: bm25-default+prf
     display: +PRF
     params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2189
+        - 0.2325
       R@100:
-        - 0.7570
+        - 0.7722
       R@1000:
-        - 0.9135
+        - 0.9185
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2639
+        - 0.2762
       R@100:
-        - 0.7884
+        - 0.8013
       R@1000:
-        - 0.9222
+        - 0.9311
   - name: bm25-tuned+rm3
     display: +RM3
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2342
+        - 0.2450
       R@100:
-        - 0.7793
+        - 0.7961
       R@1000:
-        - 0.9239
+        - 0.9363
   - name: bm25-tuned+ax
     display: +Ax
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2250
+        - 0.2330
       R@100:
-        - 0.7730
+        - 0.7888
       R@1000:
-        - 0.9268
+        - 0.9353
   - name: bm25-tuned+prf
     display: +PRF
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.2184
+        - 0.2276
       R@100:
-        - 0.7520
+        - 0.7687
       R@1000:
-        - 0.9101
+        - 0.9157
