--- a/src/main/resources/regression/mrtydi-v1.1-te.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-te.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.mrtydi-v1.1-telugu/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
+index_options: -storePositions -storeDocvectors -storeRaw -language te
 index_stats:
   documents: 548224
   documents (non-empty): 548224
