--- a/src/main/resources/regression/mrtydi-v1.1-sw.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-sw.yaml
@@ -48,7 +48,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -hits 100 -pretokenized
+    params: -bm25 -hits 100 -language sw
     results:
       MRR@100:
         - 0.2610
