--- a/src/main/resources/regression/mrtydi-v1.1-sw.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-sw.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.mrtydi-v1.1-swahili/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
+index_options: -storePositions -storeDocvectors -storeRaw -language sw
 index_stats:
   documents: 136689
   documents (non-empty): 136689
@@ -48,7 +48,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -hits 100 -pretokenized
+    params: -bm25 -hits 100 -language sw
     results:
       MRR@100:
         - 0.2610
