--- a/src/main/resources/regression/mrtydi-v1.1-te.yaml
+++ b/src/main/resources/regression/mrtydi-v1.1-te.yaml
@@ -6,7 +6,7 @@ index_path: indexes/lucene-index.mrtydi-v1.1-telugu/
 collection_class: MrTyDiCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 1
-index_options: -storePositions -storeDocvectors -storeRaw -pretokenized
+index_options: -storePositions -storeDocvectors -storeRaw -language te
 index_stats:
   documents: 548224
   documents (non-empty): 548224
@@ -48,7 +48,7 @@ topics:
 models:
   - name: bm25
     display: BM25
-    params: -bm25 -hits 100 -pretokenized
+    params: -bm25 -hits 100 -language te
     results:
       MRR@100:
         - 0.2847
