--- a/src/main/resources/docgen/templates/msmarco-v2-passage-d2q-t5.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage-d2q-t5.template
@@ -1,8 +1,7 @@
 # Anserini: Regressions for [MS MARCO (V2) Passage Ranking](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)
 
-This page describes regression experiments for passage ranking _on the augmented version_ of the MS MARCO (V2) passage corpus using the dev queries, which is integrated into Anserini's regression testing framework.
-Here, we cover bag-of-words baselines.
-For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-v2.md).
+This page describes regression experiments for passage ranking on the MS MARCO (V2) passage corpus using the dev queries, which is integrated into Anserini's regression testing framework.
+Here, we expand the passage corpus with doc2query-T5.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
@@ -15,8 +14,7 @@ Typical indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-v2-passage-augmented/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
-See [this page](experiments-msmarco-v2.md) for additional details.
+The directory `/path/to/msmarco-v2-passage-d2q-t5/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
